UPDATE: Conexion Backend + DB